--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <a href="https://github.com/faizan9898/CODSOFT"><img src="images/p4.jpg" alt=""></a>
+                        <a href="https://faizan9898.github.io/portfolio/"><img src="images/p4.jpg" alt=""></a>
                             <div class="text">Portfolio Website</div>
                             <p>My Personal Portfolio using(HTML,CSS,js,Bootstraps)check for more...click to check codes...</p>
                     </div>
